--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -2,19 +2,34 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".GymInfoFragment"
-    tools:layout_editor_absoluteY="81dp"
-    android:id="@+id/relativeLayout">
+    tools:layout_editor_absoluteY="81dp">
+
+    <Button
+        android:id="@+id/profile_button_classes"
+        android:layout_width="161dp"
+        android:layout_height="44dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/profile_button_style"
+        android:clickable="false"
+        android:text="@string/profile_user_view_classes"
+        android:textColor="#FFFFFF"
+        android:textSize="17sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.92"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <View
         android:id="@+id/separator_profile_1"
         android:layout_width="match_parent"
         android:layout_height="47dp"
         android:background="@color/app_color_gray"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <TextView
@@ -26,9 +41,9 @@
         android:textColor="#000000"
         android:textSize="35sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <TextView
@@ -37,10 +52,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="57dp"
         android:text="@string/profile_name_label"
-        android:textStyle="bold"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -53,9 +68,9 @@
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@+id/profile_name_label"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/profile_name_label" />
 
     <ImageView
         android:id="@+id/profile_name_edit"
@@ -63,8 +78,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="86dp"
         android:src="@drawable/baseline_edit_black_24dp"
-        app:layout_constraintTop_toTopOf="@+id/profile_name_label"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/profile_name_label" />
 
 
     <TextView
@@ -74,9 +89,9 @@
         android:layout_marginTop="120dp"
         android:text="@string/profile_surname_label"
         android:textAlignment="center"
-        android:textStyle="bold"
         android:textColor="#000000"
         android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -90,17 +105,17 @@
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@+id/profile_surname_label"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/profile_surname_label" />
 
     <ImageView
         android:id="@+id/profile_surname_edit"
         android:layout_width="23dp"
         android:layout_height="wrap_content"
         android:src="@drawable/baseline_edit_black_24dp"
-        app:layout_constraintTop_toTopOf="@+id/profile_surname_label"
-        app:layout_constraintStart_toStartOf="@+id/profile_name_edit" />
+        app:layout_constraintStart_toStartOf="@+id/profile_name_edit"
+        app:layout_constraintTop_toTopOf="@+id/profile_surname_label" />
 
     <TextView
         android:id="@+id/profile_height_label"
@@ -110,8 +125,8 @@
         android:text="@string/profile_height_label"
         android:textAlignment="center"
         android:textColor="#000000"
-        android:textStyle="bold"
         android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -125,17 +140,17 @@
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@+id/profile_height_label"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/profile_height_label" />
 
     <ImageView
         android:id="@+id/profile_height_edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/baseline_edit_black_24dp"
-        app:layout_constraintTop_toTopOf="@+id/profile_height_label"
-        app:layout_constraintStart_toStartOf="@+id/profile_name_edit" />
+        app:layout_constraintStart_toStartOf="@+id/profile_name_edit"
+        app:layout_constraintTop_toTopOf="@+id/profile_height_label" />
 
     <TextView
         android:id="@+id/profile_weight_label"
@@ -143,9 +158,9 @@
         android:layout_height="wrap_content"
         android:text="@string/profile_weight_label"
         android:textAlignment="center"
-        android:textStyle="bold"
         android:textColor="#000000"
         android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -171,8 +186,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/baseline_edit_black_24dp"
-        app:layout_constraintTop_toTopOf="@+id/profile_weight_label"
-        app:layout_constraintStart_toStartOf="@+id/profile_name_edit" />
+        app:layout_constraintStart_toStartOf="@+id/profile_name_edit"
+        app:layout_constraintTop_toTopOf="@+id/profile_weight_label" />
 
     <TextView
         android:id="@+id/profile_started_label"
@@ -181,9 +196,9 @@
         android:layout_marginBottom="168dp"
         android:text="@string/profile_date_started"
         android:textAlignment="center"
-        android:textStyle="bold"
         android:textColor="#000000"
         android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -207,8 +222,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/baseline_edit_black_24dp"
-        app:layout_constraintTop_toTopOf="@+id/profile_started_label"
-        app:layout_constraintStart_toStartOf="@+id/profile_name_edit" />
+        app:layout_constraintStart_toStartOf="@+id/profile_name_edit"
+        app:layout_constraintTop_toTopOf="@+id/profile_started_label" />
 
     <TextView
         android:id="@+id/profile_id_label"
@@ -218,8 +233,8 @@
         android:text="@string/profile_id"
         android:textAlignment="center"
         android:textColor="#000000"
-        android:textStyle="bold"
         android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -242,20 +257,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/baseline_edit_black_24dp"
-        app:layout_constraintTop_toTopOf="@+id/profile_id_label"
-        app:layout_constraintStart_toStartOf="@+id/profile_name_edit" />
+        app:layout_constraintStart_toStartOf="@+id/profile_name_edit"
+        app:layout_constraintTop_toTopOf="@+id/profile_id_label" />
 
     <Button
         android:id="@+id/profile_button_clear"
-        android:layout_width="227dp"
+        android:layout_width="159dp"
         android:layout_height="44dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/profile_button_style"
-        android:text="Reset All"
+        android:text="@string/profile_user_reset"
         android:textColor="#FFFFFF"
-        android:textSize="30sp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintHorizontal_bias="0.079"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
