--- a/app/src/main/res/layout/user_classes_activity.xml
+++ b/app/src/main/res/layout/user_classes_activity.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="16dp"
-        android:text="Your Classes"
+        android:text="@string/user_classes"
         android:textColor="#000000"
         android:textSize="35sp"
         app:layout_constraintBottom_toTopOf="@+id/class_recycler_view"
