--- a/app/src/main/res/layout/gyminfo_fragment.xml
+++ b/app/src/main/res/layout/gyminfo_fragment.xml
@@ -115,6 +115,7 @@
                     android:textStyle="italic"
                     android:textSize="16dp"
                     android:text="@string/telephone"
+                    android:textColorLink="@color/app_color_cambridge_blue"
                     android:autoLink="phone"/>
 
             </LinearLayout>
@@ -135,6 +136,7 @@
                     android:layout_marginStart="5dp"
                     android:textStyle="italic"
                     android:textSize="16dp"
+                    android:textColorLink="@color/app_color_cambridge_blue"
                     android:autoLink="email"
                     android:text="@string/email"/>
             </LinearLayout>
@@ -148,17 +150,20 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="MYT Software Solutions Ltd"
+                    android:textSize="12dp"
                     android:textStyle="bold"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textStyle="italic"
+                    android:textSize="12dp"
                     android:text="@string/emailMYT"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="   All copyrights reserved"
                 android:textStyle="bold"
+                android:textSize="12dp"
                 android:gravity="center_horizontal"
                 />
             </LinearLayout>
