--- a/app/src/main/res/layout/user_classes_activity.xml
+++ b/app/src/main/res/layout/user_classes_activity.xml
@@ -12,12 +12,14 @@
         android:layout_marginBottom="8dp"
         android:layout_marginTop="16dp"
         android:text="@string/user_classes"
-        android:textColor="#000000"
-        android:textSize="35sp"
+        android:textSize="38sp"
+        android:gravity="center_horizontal"
         app:layout_constraintBottom_toTopOf="@+id/class_recycler_view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@drawable/profile_button_style"
+        android:textColor="#FFFFFF"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/class_recycler_view"
