--- a/app/src/main/res/layout/activity_client_view.xml
+++ b/app/src/main/res/layout/activity_client_view.xml
@@ -21,11 +21,12 @@
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
 
-       <ListView
+       <android.support.v7.widget.RecyclerView
+           android:id="@+id/clientList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
 
-       </ListView>
+       </android.support.v7.widget.RecyclerView>
    </LinearLayout>
 </LinearLayout>
