--- a/app/src/main/res/layout/classes_fragment.xml
+++ b/app/src/main/res/layout/classes_fragment.xml
@@ -3,20 +3,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="58dp"
     android:orientation="vertical">
-
 
 
 
     <Button
         android:id="@+id/datespinner"
         android:layout_width="200dp"
-        android:layout_gravity="center"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:background="@drawable/profile_button_style"
         android:text="@string/date"
         android:textColor="#FFFFFF"
-        android:background="@drawable/profile_button_style"
         android:textSize="30sp"
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="46dp" />
@@ -24,7 +22,54 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/classView"
         android:layout_width="match_parent"
-        android:layout_height="415dp" />
+        android:layout_height="302dp" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="78dp"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
 
+        <Button
+            android:layout_width="110dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@drawable/profile_button_style"
+            android:textColor="#FFFFFF"
+            android:text="2 days"
+            android:textSize="30sp" />
+
+        <Button
+            android:layout_width="110dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@drawable/profile_button_style"
+            android:textColor="#FFFFFF"
+            android:text="3 days"
+            android:textSize="30sp" />
+
+        <Button
+            android:layout_width="110dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="4 days"
+            android:background="@drawable/profile_button_style"
+            android:textColor="#FFFFFF"
+            android:textSize="30sp" />
+
+    </LinearLayout>
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:layout_gravity="center_horizontal">
+    <Button
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="5 days"
+        android:background="@drawable/profile_button_style"
+        android:textColor="#FFFFFF"
+        android:textSize="30sp" />
+</LinearLayout>
 </LinearLayout>
